fix(FlashHandler): 1. Message handler 消息异常捕获打印 2. 其它优化