@@ -20,7 +20,6 @@ import java.util.Objects;
 import java.util.Set;
 import java.util.concurrent.*;
 import java.util.concurrent.atomic.AtomicBoolean;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 /***
@@ -42,6 +41,18 @@ public abstract class MessageHandler<H extends IMessageHandler<H>>
 	private final AtomicBoolean destroyed = new AtomicBoolean();
 
 	/**
+	 * 执行消息
+	 * @param message 消息
+	 */
+	private void executorMessage(IMessage<H> message) {
+		try {
+			message.execute((H) this);
+		}catch (Exception e) {
+			logger.error("Message handler exception:", e);
+		}
+	}
+
+	/**
 	 * 添加一条可以执行消息
 	 * @param msg
 	 */
@@ -51,7 +62,7 @@ public abstract class MessageHandler<H extends IMessageHandler<H>>
 			logger.error(LogUtils.dumpStack("MessageHandler ["+getIdentity()+"] 已经关闭销毁"));
 			return false;
 		}
-		executor.get().execute(() -> msg.execute((H) this));
+		executor.get().execute(() -> this.executorMessage(msg));
 		return true;
 	}
 
@@ -62,7 +73,7 @@ public abstract class MessageHandler<H extends IMessageHandler<H>>
 			return;
 		}
 
-		ThreadPoolManager.NORMAL.execute(() -> message.execute((H) this));
+		ThreadPoolManager.NORMAL.execute(() -> this.executorMessage(message));
 	}
 
 
@@ -148,7 +159,7 @@ public abstract class MessageHandler<H extends IMessageHandler<H>>
 		public MessageHandlerEventLoop(int count) {
 			this.eventLoops = IntStream.range(0, count)
 				.mapToObj(DExecutorService::new)
-			.collect(Collectors.toList());
+			.toList();
 		}
 
 		public DExecutorService getEventLoop(Object key) {
